--- a/Unit 3/Module 5/specialCharacters.html
+++ b/Unit 3/Module 5/specialCharacters.html
@@ -4,20 +4,22 @@
   <head>
   </head>
   <body>
-  <p>&lt;!DOCTYPE html&gt;
- 	&lt;html&gt;
- 	&lt;head&gt;
- 	&lt;meta charset="utf-8" &gt;
- 	&lt;title&gt;My Name | home page&lt;/title&gt;
- 	 
- 	 
- 	&lt;/head&gt;
- 	
-&lt;body&gt;
+ <p>&lt;!DOCTYPE html&gt;</p>
+ <p>&nbsp;&lt;html&gt;</p>
+ <p>&nbsp;&lt;head&gt;</p>
+ <p>&nbsp;&lt;meta charset="utf-8" &gt;</p>
+ <p>&nbsp;&lt;title&gt;My Name | home page&lt;/title&gt;</p>
+<br> 	 
+<br> 	 
+ <p>&nbsp;&lt;/head&gt;</p>
+ <br>	
+<p>&lt;body&gt;</p>
+<br>
+<p>Hello, this is a example of &lt;em&gt;html&lt;/em&gt; text.</p>
+<br>
+ <p>&nbsp;&lt;/body&gt;</p>
+ <p>&nbsp;&lt;/html&gt;</p>
 
-Hello, this is a example of &lt;em&gt;html&lt;/em&gt; text.
 
- 	&lt;/body&gt;
- 	&lt;/html&gt;</p>
   </body>
 </html>
