--- a/Unit 3/Module 6/divSpan.html
+++ b/Unit 3/Module 6/divSpan.html
@@ -15,7 +15,7 @@
         <p>The nav bar</p>
     </div>
     <div class="body">
-        <p>Body this is the</p>
+        <p>Body this is the<span class="orange">this text is orange</span></p>
     </div>
     <div class="footer">
         <p>Footer text Ben</p>
