--- a/Unit 3/Module 6/divSpan.html
+++ b/Unit 3/Module 6/divSpan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>hello</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="formatting.css">
   
 </head>
   
