--- a/Unit 3/Module 3/metapage.html
+++ b/Unit 3/Module 3/metapage.html
@@ -8,7 +8,7 @@
                                                        
         <title>Ben | home page</title>                                                    
  
-        <link rel="icon" href="favicon.ico"                                                       
+        <link rel="icon" href="favicon.ico">                                                       
                                                        
   </head>
       <body>
