--- a/Unit 3/Module 3/metapage.html
+++ b/Unit 3/Module 3/metapage.html
@@ -3,8 +3,8 @@
 <html>
       <head>
         <meta charset=utf-8">
-        <meta name="description" content="My first page that can be found by google"
-        <meta name="keywords" content="web design, meta tags"
+        <meta name="description" content="My first page that can be found by google">
+        <meta name="keywords" content="web design, meta tags">
                                                        
         <title>Ben | home page</title>                                                    
  
