--- a/Unit 3/Module 7/images.html
+++ b/Unit 3/Module 7/images.html
@@ -6,5 +6,10 @@
     <title>Images</title>
   </head>
   <body>
+    <img src="images/1topbun.png" alt="" width="120" height="95">
+    <img src="images/2cheese.png" alt="" width="120" height="95">
+    <img src="images/2cheese2.png" alt="" width="120" height="95">
+    <img src="images/2cheese3.png" alt="" width="120" height="95">
+    <img src="images/3bottombun.png" alt="" width="120" height="95">
   </body>
 </html>
