--- a/Unit 3/Module 7/images.html
+++ b/Unit 3/Module 7/images.html
@@ -6,10 +6,10 @@
     <title>Images</title>
   </head>
   <body>
-    <img src="Images/1topbun.png" alt="" width="120" height="95">
-    <img src="Images/2cheese.png" alt="" width="120" height="95">
-    <img src="Images/2cheese2.png" alt="" width="120" height="95">
-    <img src="Images/2cheese3.png" alt="" width="120" height="95">
-    <img src="Images/3bottombun.png" alt="" width="120" height="95">
+    <img src="Images/1topbun.png" alt="" width="120" height="95"><br>
+    <img src="Images/2cheese.png" alt="" width="120" height="95"><br>
+    <img src="Images/2cheese2.png" alt="" width="120" height="95"><br>
+    <img src="Images/2cheese3.png" alt="" width="120" height="95"><br>
+    <img src="Images/3bottombun.png" alt="" width="120" height="95"><br>
   </body>
 </html>
