--- a/Unit 3/index.html
+++ b/Unit 3/index.html
@@ -45,6 +45,11 @@
     <nav>
         <a href="Module 7/images.html">Images</a><br>
     </nav>
+    
+    <h1>Module 8</h1>
+    <nav>
+        <a href="Module 8/list.html">Lists</a><br>
+    </nav>
   
 </body>
 </html>
