--- a/Unit 3/index.html
+++ b/Unit 3/index.html
@@ -49,7 +49,9 @@
     <h1>Module 8</h1>
     <nav>
         <a href="Module 8/list.html">Lists</a><br>
+        <a href="Module8/index.html">Table for groceries</a><br>
+        <a href="Module8/main.css">Table color</a><br>
     </nav>
-  
+    
 </body>
 </html>
