--- a/Unit 3/index.html
+++ b/Unit 3/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Unit 3 Modules</title>
 </head>
-
+<body>
     <h1>Module 2</h1>
     <nav>
         <a href="Module 2/U3M2L1page.html">U3M2L1</a><br>
