--- a/Unit 4/Module 3/U4M3L1.html
+++ b/Unit 4/Module 3/U4M3L1.html
@@ -10,6 +10,6 @@
     <h1>Hello there.</h1>
     <p>I am Ben.</p>
     <p id="student">I am a student.</p>
-    <p class="down">I am sitting down right now./p>
+    <p class="down">I am sitting down right now.</p>
 </body>
 </html>
