--- a/Unit 4/Module 3/Relational_Selectors.html
+++ b/Unit 4/Module 3/Relational_Selectors.html
@@ -24,12 +24,12 @@
 </head>
 <body>
     <h1>Header 1</h1>
-    <p>Being controlled by the Adjacent Sibling director h1+p</p>
-        <p>I should be red, being controlled by the deacdent selector p</p>
+    <p>Being controlled by the Adjacent Sibling director h1+p giving the color orange</p>
+    <p>I should be red, being controlled by the decadent selector p</p>
 
     <div class="yellow">
-        <p>Controlled by the child selector for this div</p>
-        <p>I should be red, being controlled by the deacdent selector p</p>
+        <p>Controlled by the child selector for this div, yellow</p>
+        <p>Controlled by the child selector for this div, yellow</p>
     </div>
     <div>
         <h2>Header 2</h2>
