Update and rename combination_selectors to Combinational_Selectors.html

--- a/Unit 4/Module 3/Combinational_Selectors.html
+++ b/Unit 4/Module 3/Combinational_Selectors.html
@@ -27,6 +27,6 @@
     <h3>Header 3</h3><br>
 
     <h4>Header 4 that is yellow.</h4>
-    <h2 class="classorange">Also in the same list are intructions for headers with my class to be yellow.</h2>
+    <h2 class="classyellow">Also in the same list are intructions for headers with my class to be yellow.</h2>
 </body>
 </html>
