--- a/Unit 4/Module 2/Color_Casestudy.html
+++ b/Unit 4/Module 2/Color_Casestudy.html
@@ -9,9 +9,9 @@
   <body>
     <table>
         <tr>
-            <title href="">Home</a>
-            <title href="">About me</a>
-            <title href="">Info</a>
+            <a>Home</a>
+            <a>About me</a>
+            <a>Info</a>
         </tr>
     </table>
     <p class="title">My Color Case Study"</p><br>
