--- a/Unit 4/Module 2/Color_Casestudy.html
+++ b/Unit 4/Module 2/Color_Casestudy.html
@@ -9,9 +9,9 @@
   <body>
     <table>
         <tr>
-            <a>Home </a>
-            <a>About me </a>
-            <a>Info</a>
+            <a href="">Home </a>
+            <a href="">About me </a>
+            <a href="">Info</a>
         </tr>
     </table>
     <p class="title">My Color Case Study"</p><br>
