--- a/Unit 4/Module 3/Paint_by_Numbers.html
+++ b/Unit 4/Module 3/Paint_by_Numbers.html
@@ -27,16 +27,16 @@
     </style>
 </head>
 <body>
-  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span>
-  <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span><XXXXXXXXXX</span>
-  <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span><XXXXXXXXXX</span>
-  <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span><XXXXXXXXXX</span>
-  <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span><XXXXXXXXXX</span>
-  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span>
-  <span>XXXXXXXXXX</span><span class"pink">X</span><span>XXXXXXXXX</span><span class="pink">X</span><span><XXXXXXXXXX</span>
-  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span>
-  <span>XXXXXXXXXX</span><span class"brown">X</span><span>XXXXXXXXX</span><span class="brown">X</span><span><XXXXXXXXXX</span>
-  <span>XXXXXXXXXX</span><span class"brown">X</span><span>XXXXXXXXX</span><span class="brown">X</span><span><XXXXXXXXXX</span>
-  <span class"brown">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span>
+  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
+  <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span><XXXXXXXXXX</span><br>
+  <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span><XXXXXXXXXX</span><br>
+  <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span><XXXXXXXXXX</span><br>
+  <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span><XXXXXXXXXX</span><br>
+  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
+  <span>XXXXXXXXXX</span><span class"pink">X</span><span>XXXXXXXXX</span><span class="pink">X</span><span><XXXXXXXXXX</span><br>
+  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
+  <span>XXXXXXXXXX</span><span class"brown">X</span><span>XXXXXXXXX</span><span class="brown">X</span><span><XXXXXXXXXX</span><br>
+  <span>XXXXXXXXXX</span><span class"brown">X</span><span>XXXXXXXXX</span><span class="brown">X</span><span><XXXXXXXXXX</span><br>
+  <span class"brown">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
   </body>
 </html>
