--- a/Unit 4/Module 3/Paint_by_Numbers.html
+++ b/Unit 4/Module 3/Paint_by_Numbers.html
@@ -17,7 +17,7 @@
             color: green;
         }
 
-        .pink > span {
+        .red_color > span {
             color: pink;
         }
 
@@ -33,7 +33,7 @@
   <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span>XXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span>XXXXXXXXXX</span><br>
   <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
-  <span>XXXXXXXXXX</span><span class="pink">X</span><span>XXXXXXXXX</span><span class="pink">X</span><span>XXXXXXXXXX</span><br>
+  <span>XXXXXXXXXX</span><span class="red_color">X</span><span>XXXXXXXXX</span><span class="red_color">X</span><span>XXXXXXXXXX</span><br>
   <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span class="brown">X</span><span>XXXXXXXXX</span><span class="brown">X</span><span>XXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span class="brown">X</span><span>XXXXXXXXX</span><span class="brown">X</span><span>XXXXXXXXXX</span><br>
