--- a/Unit 4/Module 3/Paint_by_Numbers.html
+++ b/Unit 4/Module 3/Paint_by_Numbers.html
@@ -33,10 +33,11 @@
   <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span>XXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span>XXXXXXXXXX</span><br>
   <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
-  <span>XXXXXXXXXX</span><span class="red_color">X</span><span>XXXXXXXXX</span><span class="red_color">X</span><span>XXXXXXXXXX</span><br>
+  <span>XXXXXXXXXX</span><span class="red_color"><span>X</span></span><span>XXXXXXXXX</span><span class="red_color"><span>X</span></span><span>XXXXXXXXXX</span><br>
   <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span class="brown">X</span><span>XXXXXXXXX</span><span class="brown">X</span><span>XXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span class="brown">X</span><span>XXXXXXXXX</span><span class="brown">X</span><span>XXXXXXXXXX</span><br>
-  <span class="brown">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
+  <span class="brown"></span><span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
+  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span>
   </body>
 </html>
