--- a/Unit 4/Module 3/Paint_by_Numbers.html
+++ b/Unit 4/Module 3/Paint_by_Numbers.html
@@ -18,7 +18,7 @@
         }
 
         .red_color > span {
-            color: pink;
+            color: red;
         }
 
         span + .brown {
@@ -27,17 +27,17 @@
     </style>
 </head>
 <body>
-  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
+  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span>XXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span>XXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span>XXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span id="purple">X</span><span>XXXXXXXXX</span><span class="green">X</span><span>XXXXXXXXXX</span><br>
-  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
+  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span class="red_color"><span>X</span></span><span>XXXXXXXXX</span><span class="red_color"><span>X</span></span><span>XXXXXXXXXX</span><br>
-  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
+  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span class="brown">X</span><span>XXXXXXXXX</span><span class="brown">X</span><span>XXXXXXXXXX</span><br>
   <span>XXXXXXXXXX</span><span class="brown">X</span><span>XXXXXXXXX</span><span class="brown">X</span><span>XXXXXXXXXX</span><br>
-  <span class="brown"></span><span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span><br>
-  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span>
+  <span>XXXXXXXXXX</span><span class="brown">XXXXXXXXXXX</span><span>XXXXXXXXXX</span><br>
+  <span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span>
   </body>
 </html>
