--- a/Unit 4/Module 3/Paint_by_Numbers.html
+++ b/Unit 4/Module 3/Paint_by_Numbers.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <titlePainting by numbers</title>
+    <title>Painting by numbers</title>
     <style>
         span {
             color: orange;
