--- a/Unit 4/Module 4/pseudo_class_page.html
+++ b/Unit 4/Module 4/pseudo_class_page.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="https://en.wikipedia.org/">Wikipedia/a></li>
+        <li><a href="https://en.wikipedia.org/">Wikipedia</li>
         <li><a href="https://www.usa.gov/">Official website</a></li>
     </ul>
 </body>
