--- a/Unit 4/Module 4/navigation_bar.html
+++ b/Unit 4/Module 4/navigation_bar.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="menu">
-        <a href="https://whycas.github.io/webdesign/Unit%204/Module%204/pseudo_class_page.html">Pseudo class page</a>
+        <a href="https://whycas.github.io/webdesign/Unit%204/Module%204/pseudo_class_page.html">Pseudo class page</a><br>
         <a href="https://whycas.github.io/webdesign/Unit%204/Module%203/Paint_by_Numbers.html">Paint by Numbers</a>
     </div>
   </body>
