--- a/Unit 4/Module 6/wedding_invitation.html
+++ b/Unit 4/Module 6/wedding_invitation.html
@@ -17,7 +17,7 @@
         font-style: cursive;
         font-weight: bold;
         font-size: 1.5rem;
-        color: #222;
+        color: purple;
       }
     </style>
   </head>
