--- a/Unit 4/Module 8/Post_It.html
+++ b/Unit 4/Module 8/Post_It.html
@@ -21,8 +21,8 @@ body {
 <body>
     <p class="note" style="margin-left: 1em;">Buy milk</p>
     <p class="note" style="margin-left: 5em;">Buy bread</p>
-    <p class="note" style="margin-left: 9m;">Sell bread</p>
-    <p class="note" style="margin-left: 13m;">go to school</p>
+    <p class="note" style="margin-left: 9em;">Sell bread</p>
+    <p class="note" style="margin-left: 13em;">go to school</p>
     <p class="note" style="margin-left: 17em;">do not drink milk it is spoiled</p>
 </body>
 </html>
