--- a/Unit 5/Module 1/image_float.html
+++ b/Unit 5/Module 1/image_float.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Image Float</title>
+     <style>
+        img {
+            width: 40px;
+         }
+    </style>
 </head>
 <body>
     <img src="roll.png" style="float: left;">
