--- a/Unit 5/Module 2/index.html
+++ b/Unit 5/Module 2/index.html
@@ -67,7 +67,7 @@
 		   height:0;
 		   clear:both;
 		   visibility:hidden;
-    }
+    		  }
 		</style>
   </head>
 <body>
@@ -76,25 +76,25 @@
           <li><p>Unit 3</p>
                 <ul>
                     <li>
-        <a href="..//../Unit 3/Module 2/U3M2L1page.html">U3M2L1</a><br>
-        <a href="..//../Unit 3/Module 2/U3M2L2Att.html">U3M2L2</a><br>
-        <a href="..//../Unit 3/Module 3/U3M3L1Att.html">U3M3L1</a><br>
-        <a href="..//../Unit 3/Module 3/metapage.html">Metapage</a><br>
-        <a href="..//../Unit 3/Module 3/favicon.ico">My favicon</a><br>
-        <a href="..//../Unit 3/Module 4/MakingPage.html">Making the Page</a><br>
-        <a href="..//../Unit 3/Module 4/headings.html">Headings</a><br>
-        <a href="..//../Unit 3/Module 5/specialCharacters.html">Special characters</a><br>
-        <a href="..//../Unit 3/Module 5/inlineText.html">Inline text</a><br>
-        <a href="..//../Unit 3/Module 6/Lesson 3/formatting.css">Formatting CSS</a><br>
-        <a href="..//../Unit 3/Module 6/Lesson 3/structure.html">Structure</a><br>
-        <a href="..//../Unit 3/Module 6/Lesson 4/U3M6L4.html">U3M6L4</a><br>
-        <a href="..//../Unit 3/Module 6/Lesson 4/U3M6L4.css">U3M6L4 CSS</a><br>
-        <a href="..//../Unit 3/Module 6/divSpan.html">divSpan</a><br>
-        <a href="..//../Unit 3/Module 6/formatting.css">formatting CSS 2</a><br>
-        <a href="..//../Unit 3/Module 7/images.html">Images</a><br>
-        <a href="..//../Unit 3/Module 8/list.html">Lists</a><br>
-        <a href="..//../Unit 3/Module 8/index.html">Table for groceries</a><br>
-        <a href="..//../Unit 3/Module 8/main.css">Table color</a><br>
+       <a href="../../Unit 3/Module 2/U3M2L1page.html">U3M2L1</a><br>
+       <a href="../../Unit 3/Module 2/U3M2L2Att.html">U3M2L2</a><br>
+       <a href="../../Unit 3/Module 3/U3M3L1Att.html">U3M3L1</a><br>
+       <a href="../../Unit 3/Module 3/metapage.html">Metapage</a><br>
+       <a href="../../Unit 3/Module 3/favicon.ico">My favicon</a><br>
+       <a href="../../Unit 3/Module 4/MakingPage.html">Making the Page</a><br>
+       <a href="../../Unit 3/Module 4/headings.html">Headings</a><br>
+       <a href="../../Unit 3/Module 5/specialCharacters.html">Special characters</a><br>
+       <a href="../../Unit 3/Module 5/inlineText.html">Inline text</a><br>
+       <a href="../../Unit 3/Module 6/Lesson 3/formatting.css">Formatting CSS</a><br>
+       <a href="../../Unit 3/Module 6/Lesson 3/structure.html">Structure</a><br>
+       <a href="../../Unit 3/Module 6/Lesson 4/U3M6L4.html">U3M6L4</a><br>
+       <a href="../../Unit 3/Module 6/Lesson 4/U3M6L4.css">U3M6L4 CSS</a><br>
+       <a href="../../Unit 3/Module 6/divSpan.html">divSpan</a><br>
+       <a href="../../Unit 3/Module 6/formatting.css">formatting CSS 2</a><br>
+       <a href="../../Unit 3/Module 7/images.html">Images</a><br>
+       <a href="../../Unit 3/Module 8/list.html">Lists</a><br>
+       <a href="../../Unit 3/Module 8/index.html">Table for groceries</a><br>
+       <a href="../../Unit 3/Module 8/main.css">Table color</a><br>
                     </li>
                 </ul>
             </li>
