--- a/Unit 5/Module 2/index.html
+++ b/Unit 5/Module 2/index.html
@@ -78,7 +78,7 @@
                     <li>
        <a href="../../Unit 3/Module 2/U3M2L1page.html">U3M2L1</a><br>
        <a href="../../Unit 3/Module 2/U3M2L2Att.html">U3M2L2</a><br>
-       <a href="../../Unit 3/Module 3/U3M3L1Att.html">U3M3L1</a><br>
+       <a href="../../Unit 3/Module 3/U3M3L1.html">U3M3L1</a><br>
        <a href="../../Unit 3/Module 3/metapage.html">Metapage</a><br>
        <a href="../../Unit 3/Module 3/favicon.ico">My favicon</a><br>
        <a href="../../Unit 3/Module 4/MakingPage.html">Making the Page</a><br>
