--- a/Unit 6/finalproject.html
+++ b/Unit 6/finalproject.html
@@ -7,5 +7,15 @@
       </style>
 </head>
 <body>
+    <h1>Trackmania: The Arcade Racing Game</h1>
+    <nav>
+        <a href="finalproject.html">About The Game</a>
+        <a href="top3list.html">Top 3 Favorite Styles</a>
+        <a href="tablerankings.html">My Best Times</a>
+    </nav>
 </body>
+<p>Welcome to my webpage about Trackmania! Trackmania is an arcade racing video game where you can race other people for the best times on tracks that anyone can build.
+   The game can be found on the Epic Games Store, or on the native platform, Ubisoft Connect. Ubisoft Nadeo is the game development studio that created and currently maintains the game.
+   They are based out of Paris, France. It is recommended by the community that you install the game on Ubisoft Connect, as the installation process on the Epic Games Store is full of bugs.
+    </p>
 </html>
