--- a/Unit 6/finalproject.html
+++ b/Unit 6/finalproject.html
@@ -14,8 +14,12 @@
         <a href="tablerankings.html">My Best Times</a>
     </nav>
 </body>
-<p>Welcome to my webpage about Trackmania! Trackmania is an arcade racing video game where you can race other people for the best times on tracks that anyone can build.
-   The game can be found on the Epic Games Store, or on the native platform, Ubisoft Connect. Ubisoft Nadeo is the game development studio that created and currently maintains the game.
-   They are based out of Paris, France. It is recommended by the community that you install the game on Ubisoft Connect, as the installation process on the Epic Games Store is full of bugs.
-    </p>
+<p>Welcome to my webpage about Trackmania! Trackmania is an arcade racing video game series where you can race other people for the best times on tracks that anyone can build.
+   The newest addition to the series can be found on the Epic Games Store, or on the native platform, Ubisoft Connect. Ubisoft Nadeo is the game development studio that created and currently maintains the game.
+   They are based out of Paris, France. It is recommended by the community that you install the game on Ubisoft Connect, as the installation process on the Epic Games Store is full of bugs.</p>
+<p>The first game in the Trackmania series I played was Trackmania 2: Stadium on Steam. I played it at a coding camp in middle school, and the enjoyment I had with the game stuck with me.
+    At one point these memories returned to me, in October of 2020, and I downloaded the same game on my own Steam account. I fell in love with the gameplay and constantly trying to improve my time.
+    I continued to play Trackmania 2: Stadium as my go-to video game of choice after school every day until April of 2021, when I downloaded the newest game of the series on Ubisoft Connect.
+    When I talk about my experiences at other points in the article, I am talking about my experiences in the newest game, which officially is called "Trackmania," but the community aptly calls
+    "Trackmania 2020."</p>
 </html>
