--- a/Unit 6/finalproject.html
+++ b/Unit 6/finalproject.html
@@ -21,5 +21,6 @@
     At one point these memories returned to me, in October of 2020, and I downloaded the same game on my own Steam account. I fell in love with the gameplay and constantly trying to improve my time.
     I continued to play Trackmania 2: Stadium as my go-to video game of choice after school every day until April of 2021, when I downloaded the newest game of the series on Ubisoft Connect.
     When I talk about my experiences at other points in the article, I am talking about my experiences in the newest game, which officially is called "Trackmania," but the community aptly calls
-    "Trackmania 2020."</p>
+    "Trackmania 2020," after the year of its release.</p>
+    <p>My experiences with the game have been amazing.</p>
 </html>
