--- a/Unit 6/finalproject.html
+++ b/Unit 6/finalproject.html
@@ -22,5 +22,11 @@
     I continued to play Trackmania 2: Stadium as my go-to video game of choice after school every day until April of 2021, when I downloaded the newest game of the series on Ubisoft Connect.
     When I talk about my experiences at other points in the article, I am talking about my experiences in the newest game, which officially is called "Trackmania," but the community aptly calls
     "Trackmania 2020," after the year of its release.</p>
-    <p>My experiences with the game have been amazing.</p>
+    <p>My experiences with the game have been amazing. I have so many fun memories in the attempts to improve myself on different surfaces & driving styles, interacting with the community,
+    participating in events, and better my overall driving skills. The community is small to medium in size compared to other gaming communities, and is comprised of mostly older people.
+    So it is not common to have distrubances by unruly players, since less players means less of a chance that one is aggressive and rude. And more older people means people are more mature,
+    and thereby again making it less likely that someone gets on the nerves on others. In other communities, this "toxicity" is ever-present, in but Trackmania, it is very minimal.<br>
+    Other than enjoying the community, I like to be actively involved in the seasonal campaign, a "pack" of 25 maps that Ubisoft Nadeo officially publishes, as well as play the Track of the Day,
+    where community members' maps are selected to be featured for 24 hours. Sometimes, I'll be able to participate in one of three daily tournaments that happen in the future, usually this happens on the weekends.
+    These events are called the "Cup of the Day[s]," and you are able to earn trophies which improve your in-game online ranking.</p>
 </html>
