--- a/Unit 6/finalproject.html
+++ b/Unit 6/finalproject.html
@@ -4,7 +4,15 @@
 <head>
     <title>Final Project</title>
     <style>
-      </style>
+        nav {
+    background-color: #4ac2e5;
+    text-align: center;
+        }
+        p {
+    color: #5abd8c;
+    text-align: center;
+        }
+    </style>
 </head>
 <body>
     <h1>Trackmania: The Arcade Racing Game</h1>
@@ -27,6 +35,6 @@
     So it is not common to have distrubances by unruly players, since less players means less of a chance that one is aggressive and rude. And more older people means people are more mature,
     and thereby again making it less likely that someone gets on the nerves on others. In other communities, this "toxicity" is ever-present, in but Trackmania, it is very minimal.<br>
     Other than enjoying the community, I like to be actively involved in the seasonal campaign, a "pack" of 25 maps that Ubisoft Nadeo officially publishes, as well as play the Track of the Day,
-    where community members' maps are selected to be featured for 24 hours. Sometimes, I'll be able to participate in one of three daily tournaments that happen in the future, usually this happens on the weekends.
+    where community members' maps are selected to be featured for 24 hours. Sometimes, I'll be able to participate in one of three daily tournaments that happen in the future; usually I am able to particpiate on the weekends.
     These events are called the "Cup of the Day[s]," and you are able to earn trophies which improve your in-game online ranking.</p>
 </html>
