--- a/Unit 6/finalproject.html
+++ b/Unit 6/finalproject.html
@@ -22,7 +22,7 @@
         h4 {
     text-align: center;
     background-color: #5abd8c
-    font-family: monospace;
+    font-family: 'Times New Roman', monospace;
         }
     </style>
 </head>
