--- a/Unit 6/finalproject.html
+++ b/Unit 6/finalproject.html
@@ -6,7 +6,7 @@
     <style>
         h1 {
     text-align: center;
-    background-color: #5abd8c
+    background-color: #5abd8c;
         }
         
         body {  
@@ -21,7 +21,7 @@
         
         h4 {
     text-align: center;
-    background-color: #5abd8c
+    background-color: #5abd8c;
     font-family: 'Times New Roman', monospace;
         }
     </style>
