--- a/Unit 6/top3list.html
+++ b/Unit 6/top3list.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-    <title>Final Project</title>
+    <title>Top 3 List</title>
     <style>
         h1 {
     text-align: center;
@@ -25,7 +25,6 @@
         }
         
         h4 {
-    text-align: center;
     background-color: #5abd8c;
     font-family: 'Times New Roman', monospace;
         }
@@ -39,11 +38,12 @@
         <a href="tablerankings.html">My Best Times</a>
     
         <h2>1.</h2>
-        <h4>My favorite track style to play is "tech." "Tech" is short for technical, which is the community's name for a map that requires you to use the game mechanic known as drifting.
+        <h4 style=text-align: center;>My favorite track style to play is "tech." "Tech" is short for technical, which is the community's name for a map that requires you to use the game mechanic known as drifting.
         Drifting can be accomplished by pressing the brake key on your controller, keyboard, or whichever other device the player uses for their inputs. Usually, tech maps are built in gear 4.
         This is against the norm, for most other maps in the game, I'd say around 80%, are in gear 5. I like the slow-paced manuvering around tight corners and obstalces. It pinches some nerve in my brain
         that makes the style feel rewarding and satisfying. There's nothing like it. Sometimes, tech maps are built in gear 5, the highest gear, in which the maps are aptly named "speedtech."
         These maps can be insanely fun and rewarding as well.</h4>
+        <img src="techroute.jpg" class="image_center"
     </nav>
 </body>
 </html>
