--- a/Unit 6/finalproject.html
+++ b/Unit 6/finalproject.html
@@ -19,10 +19,11 @@
     text-align: center;
         }
         
-        h4 {
+        p {
     text-align: center;
+    font-size: 15px;
     background-color: #5abd8c;
-    font-family: 'Courier New', monospace;
+    font-family: 'Times New Roman', monospace;
         }
     </style>
 </head>
@@ -33,20 +34,20 @@
         <a href="top3list.html">Top 3 Favorite Styles</a>
         <a href="tablerankings.html">My Best Times</a>
     </nav>
-    <h4>Welcome to my webpage about Trackmania! Trackmania is an arcade racing video game series where you can race other people for the best times on tracks that anyone can build.
+    <p>Welcome to my webpage about Trackmania! Trackmania is an arcade racing video game series where you can race other people for the best times on tracks that anyone can build.
    The newest addition to the series can be found on the Epic Games Store, or on the native platform, Ubisoft Connect. Ubisoft Nadeo is the game development studio that created and currently maintains the game.
-   They are based out of Paris, France. It is recommended by the community that you install the game on Ubisoft Connect, as the installation process on the Epic Games Store is full of bugs.</h4>
-    <h4>The first game in the Trackmania series I played was Trackmania 2: Stadium on Steam. I played it at a coding camp in middle school, and the enjoyment I had with the game stuck with me.
+   They are based out of Paris, France. It is recommended by the community that you install the game on Ubisoft Connect, as the installation process on the Epic Games Store is full of bugs.</p>
+    <p>The first game in the Trackmania series I played was Trackmania 2: Stadium on Steam. I played it at a coding camp in middle school, and the enjoyment I had with the game stuck with me.
     At one point these memories returned to me, in October of 2020, and I downloaded the same game on my own Steam account. I fell in love with the gameplay and constantly trying to improve my time.
     I continued to play Trackmania 2: Stadium as my go-to video game of choice after school every day until April of 2021, when I downloaded the newest game of the series on Ubisoft Connect.
     When I talk about my experiences at other points in the article, I am talking about my experiences in the newest game, which officially is called "Trackmania," but the community aptly calls
-    "Trackmania 2020," after the year of its release.</h4>
-    <h4>My experiences with the game have been amazing. I have so many fun memories in the attempts to improve myself on different surfaces & driving styles, interacting with the community,
+    "Trackmania 2020," after the year of its release.</p>
+    <p>My experiences with the game have been amazing. I have so many fun memories in the attempts to improve myself on different surfaces & driving styles, interacting with the community,
     participating in events, and better my overall driving skills. The community is small to medium in size compared to other gaming communities, and is comprised of mostly older people.
     So it is not common to have distrubances by unruly players, since less players means less of a chance that one is aggressive and rude. And more older people means people are more mature,
-    and thereby again making it less likely that someone gets on the nerves on others. In other communities, this "toxicity" is ever-present, in but Trackmania, it is very minimal.</h4>
-    <h4>Other than enjoying the community, I like to be actively involved in the seasonal campaign, a "pack" of 25 maps that Ubisoft Nadeo officially publishes, as well as play the Track of the Day,
+    and thereby again making it less likely that someone gets on the nerves on others. In other communities, this "toxicity" is ever-present, in but Trackmania, it is very minimal.</p>
+    <p>Other than enjoying the community, I like to be actively involved in the seasonal campaign, a "pack" of 25 maps that Ubisoft Nadeo officially publishes, as well as play the Track of the Day,
     where community members' maps are selected to be featured for 24 hours. Sometimes, I'll be able to participate in one of three daily tournaments that happen in the future; usually I am able to particpiate on the weekends.
-    These events are called the "Cup of the Day[s]," and you are able to earn trophies which improve your in-game online ranking.</h4>
+    These events are called the "Cup of the Day[s]," and you are able to earn trophies which improve your in-game online ranking.</p>
     </body>
     </html>
