--- a/Unit 6/top3list.html
+++ b/Unit 6/top3list.html
@@ -35,6 +35,12 @@
     padding: 2px;
     text-align: center;
         }
+        
+        .image_center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
 
       </style>
 </head>
