--- a/Unit 6/top3list.html
+++ b/Unit 6/top3list.html
@@ -21,7 +21,7 @@
         }
         
         p {
-    font-size: 15px;
+    font-size: 1.5em;
     background-color: #5abd8c;
     font-family: 'Times New Roman', monospace;
         }
@@ -50,7 +50,7 @@
         <a href="finalproject.html">About The Game</a>
         <a href="top3list.html">Top 3 Favorite Styles</a>
         <a href="tablerankings.html">My Best Times</a>
-    
+    </nav>
         <h2>1.</h2>
         <p style=text-align: left;>My favorite track style to play is "tech." "Tech" is short for technical, which is the community's name for a map that requires you to use the game mechanic known as drifting.
         Drifting can be accomplished by pressing the brake key on your controller, keyboard, or whichever other device the player uses for their inputs. Usually, tech maps are built in gear 4.
@@ -81,6 +81,5 @@
             <img src="grassroute.jpg" class="image_center">
                 <figcaption>A grass route I enjoyed driving.</figcaption>
         </figure>
-    </nav>
 </body>
 </html>
