--- a/Unit 6/finalproject.html
+++ b/Unit 6/finalproject.html
@@ -6,7 +6,7 @@
     <style>
         p {
     text-align: center;
-    font-size: 20px;
+    font-size: 1.5em;
     background-color: #5abd8c;
     font-family: 'Times New Roman', monospace;
         }
