--- a/Unit 6/top3list.html
+++ b/Unit 6/top3list.html
@@ -68,7 +68,7 @@
         open space on maps.</p>
         <figure>
             <img src="mixedroute.jpg" class="image_center">
-                  <figcaption>Examples of the different surfaces used on mixed maps, plastic, ice, grass, and dirt."
+                  <figcaption>Examples of the different surfaces used on mixed maps, plastic, ice, grass, and dirt.</figcaption>
         </figure>
         
         <h2>3.</h2>
