--- a/Unit 6/tablerankings.html
+++ b/Unit 6/tablerankings.html
@@ -53,11 +53,49 @@
     
 <table style="width:100%">
   <tr>
-    <th>Name and Author</th>
+    <th>Name and Date</th>
+    <th>My Global Ranking</th>
   </tr>
   <tr>
-    <td>My Global Ranking</td>
+    <td>March 1st 2022 - HabMichLieb Würfel</td>
+    <td>1 (WR)</td>
   </tr>
+  <tr>
+    <td>December 7th, 2022 - Vile Jungle</td>
+    <td>27</td>
+  </tr>
+  <tr>
+    <td>November 12th, 2022 - Cut Down</td>
+    <td>28</td>
+  </tr>
+  <tr>
+    <td>September 5th, 2022 - HydroPower</td>
+    <td>31</td>
+  </tr>
+  <tr>
+    <td>December 4th, 2022 - AZUL</td>
+    <td>31</td>
+  </tr>
+  <tr>
+    <td>July 2nd, 2022 - Twilight</td>
+    <td>33</td>
+  </tr>
+  <tr>
+    <td>July 11th, 2022 - In The Shadow Of The Valley</td>
+    <td>36</td>
+  </tr>
+  <tr>
+    <td>December 14th, 2022 - Areonyx ft' Dot</td>
+    <td>42</td>
+  </tr>
+  <tr>
+    <td>January 3rd, 2023 - Tachycardia</td>
+    <td>42</td>
+  </tr>
+  <tr>
+    <td>June 1st, 2022 - Summer Park ft Tomote</td>
+    <td>45</td>
+  </tr>    
 </table>    
 </body>
 </html>
