--- a/Unit 6/tablerankings.html
+++ b/Unit 6/tablerankings.html
@@ -50,7 +50,10 @@
         <a href="top3list.html">Top 3 Favorite Styles</a>
         <a href="tablerankings.html">My Best Times</a>
     </nav>
-    
+<p>The following is a table recognizing my best placements in the world on 'Track of the Day's. The Track of the Day is a daily time placement tournament where the community races to set
+    the best time on a selected map made by the community within 24 hours. After 24 hours, the official leaderboards are locked and in-game trophies are distributed. Hence, why I call this
+    list my "best times," since my best times resulted in my best placements. On average, 8,000 to 9,000 people will play a Track of the Day before leaderboards close, and since starting in
+    April 2022, I have played just under 400 Track of the Days (I try to do it daily.)</p>
 <table style="width:100%">
   <tr>
     <th>Name and Date</th>
