--- a/Unit 6/tablerankings.html
+++ b/Unit 6/tablerankings.html
@@ -41,6 +41,10 @@
         table, th, td {
      border: 2px solid black;
         }
+        
+        th {
+     text-align: center;
+        }
       </style>
 </head>
 <body>
