--- a/Unit 6/top3list.html
+++ b/Unit 6/top3list.html
@@ -68,13 +68,13 @@
         open space on maps.</p>
         <figure>
             <img src="mixedroute.jpg" class="image_center">
-                  <figcaption>Examples of the different surfaces used on mixed maps, plastic, ice, grass, and dirt.</figcaption>
+                  <figcaption>Examples of the different surfaces used on mixed maps: plastic, ice, grass, and dirt.</figcaption>
         </figure>
         
         <h2>3.</h2>
         <p style=text-align: right;>My third favorite track style to play is "grass." Grass is one of the more slippery surfaces in the game, meaning friction between your wheels and
             the ground is very minimal. I prefer grass maps that are in 4th gear, as they are super satisfying maps to drive. However, I would say only 40-50% of grass maps are mapped in
-            fourth gear. I prefer grass to dirt because grass maps are more smooth, and also because dirt maps usually will require you to release you acceleration, which is not a trick
+            fourth gear. I prefer grass to dirt because grass maps are more smooth, and also because dirt maps usually will require you to release your acceleration, which is not a trick
             I enjoy performing.</p>
         <figure>
             <img src="grassroute.jpg" class="image_center">
