--- a/Unit 6/top3list.html
+++ b/Unit 6/top3list.html
@@ -76,7 +76,7 @@
             fourth gear. I prefer grass to dirt because grass maps are more smooth, and also because dirt maps usually will require you to release your acceleration, which is not a trick
             I enjoy performing.</p>
         <figure>
-            <img src="grassroute.jpg" class="image_center">
+            <img src="grassroute.jpg" class="image_center" width="60%" height="60%">
                 <figcaption>A grass route I enjoyed driving.</figcaption>
         </figure>
 </body>
