--- a/Unit 6/tablerankings.html
+++ b/Unit 6/tablerankings.html
@@ -12,6 +12,8 @@
         nav {
     background-color: #5abd8c;
     font-size: 25px;
+    margin-left: 10px;
+    margin-right: 10px;    
     text-align: center;
         }
         
