--- a/Unit 6/top3list.html
+++ b/Unit 6/top3list.html
@@ -19,6 +19,11 @@
     text-align: center;
         }
         
+        nav a {
+    margin-left: 15px;
+    margin-right: 15px;
+        }
+        
         p {
     font-size: 1.5em;
     background-color: #5abd8c;
