--- a/Unit 6/finalproject.html
+++ b/Unit 6/finalproject.html
@@ -29,6 +29,11 @@
     font-size: 25px;
     text-align: center;
         }
+        
+        nav a {
+    margin-left: 15px;
+    margin-right: 15px;
+        }
     </style>
 </head>
 <body>
